--- a/css/projects.css
+++ b/css/projects.css
@@ -4,9 +4,7 @@
     display: flex;
     align-items: center !important;
     height: 100vh;
-    overflow: hidden;
-    overflow-y: hidden;
-    overflow-x: hidden;
+    overflow: auto;
   
   }
   
@@ -36,11 +34,12 @@
     display: flex;
     flex-direction: column;
     height: 75%;
-    width: 80%;
+    width: 75%;
     justify-content: center;
     align-items: center;
     position: relative;
     padding: 30px;
+    padding-right: 80px;
 
   }
 
@@ -50,7 +49,6 @@
     justify-content: center;
     flex-direction: column;
     align-items: center;
-    overflow-y: scroll;
     height: 100%;
     width: 50%;
     
